Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139780

Qt Positioning: Discrepancy between documented type names and actual type names

XMLWordPrintable

    • d8a82f59d (tqtc/lts-6.8), 3b8de9696 (tqtc/lts-6.8), e4d7be72e (tqtc/lts-6.8), ee04e9abb (tqtc/lts-6.5), 31212e9cb (tqtc/lts-6.5), 4cc2eddec (tqtc/lts-6.5), cc0ab4739 (dev), 281007745 (dev), 8e6cf841f (dev), 91446774c (6.10), aec48c73c (6.10)
    • DaVinci 124, DaVinci 125, DaVinci 126, DaVinci 127

      https://codereview.qt-project.org/c/qt/qtpositioning/+/435520 gave formal names to the QML value types, which were previously "anonymous". This means: Before that patch, QML code was unable to refer to those types by name.

      Informal names for these types already exist throughout our documentation (see https://doc.qt.io/qt-6/qtpositioning-qmlmodule.html#value-types and https://doc.qt.io/qt-6/qml-qtpositioning-location.html#coordinate-prop for example), but unfortunately these informal names don't match the actual names that QML code would now use. For example:

      property geoCoordinate london1: ( { "latitude": 51.5072, "longitude": -0.1276 } ) // Correct
      
      property coordinate london2: ( { "latitude": 51.5072, "longitude": -0.1276 } ) // ERROR: "coordinate" does not exist
      

       

      Here's a complete table of the value types:

      Documented name Actual name
      coordinate geoCoordinate
      geoSatelliteInfo geoSatelliteInfo
      geocircle geoCircle
      geopath geoPath
      geopolygon geoPolygon
      georectangle geoRectangle
      geoshape geoShape

       

      Notes
      geoAddress, geoLocation, and geoPositionInfo are missing from https://doc.qt.io/qt-6/qtpositioning-qmlmodule.html#value-types

        For Gerrit Dashboard: QTBUG-139780
        # Subject Branch Project Status CR V

            eren Eren Bursali
            skoh-qt Sze Howe Koh
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:

                There is 1 open Gerrit change