Docs: fix documentation for geoCircle

Replacing "geocircle" with "geoCircle" according to the documentation

Amends 4b40887556e69073d5c7764c0e5b1ebc1ec28958

Task-number: QTBUG-139780
Pick-to: 6.5 6.8 6.10
Change-Id: I89d789b83d5be726f14b9d5ca3839c052280a52b
Reviewed-by: Kai Köhne <kai.koehne@qt.io>